Update file/IO internals

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1486,7 +1486,7 @@
       \cs_set:Npn \@@_escape_escaped:N ##1 { #2 }
       \cs_set:Npn \@@_escape_raw:N ##1 { #3 }
       \@@_standard_escapechar:
-      \tl_gset:Nx \g_@@_internal_tl { \__str_to_other_fast:n {#4} }
+      \tl_gset:Nx \g_@@_internal_tl { \__kernel_str_to_other_fast:n {#4} }
       \tl_put_right:Nx \l_@@_internal_a_tl
         {
           \exp_after:wN \@@_escape_loop:N \g_@@_internal_tl
@@ -3330,7 +3330,7 @@
 \cs_new_protected:Npn \@@_compile_u_in_cs:
   {
     \tl_gset:Nx \g_@@_internal_tl
-      { \exp_args:No \__str_to_other_fast:n { \l_@@_internal_a_tl } }
+      { \exp_args:No \__kernel_str_to_other_fast:n { \l_@@_internal_a_tl } }
     \tl_build_put_right:Nx \l_@@_build_tl
       {
         \tl_map_function:NN \g_@@_internal_tl
