--- a/l3trial/l3fp-extras/l3fp-interchange.dtx
+++ b/l3trial/l3fp-extras/l3fp-interchange.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3fp-interchange.dtx (C) Copyright 2017 The LaTeX3 Project
+%% File l3fp-interchange.dtx (C) Copyright 2017-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -130,7 +130,7 @@
 %   converts it to \pkg{l3fp} floating-points.  First test things a bit
 %    \begin{macrocode}
 \cs_new:Npn \fp_from_bytes:n #1
-  { \exp_args:Nf \@@_from_bytes:n { \__str_to_other:n {#1} } }
+  { \exp_args:Nf \@@_from_bytes:n { \__kernel_str_to_other:n {#1} } }
 \cs_new:Npn \@@_from_bytes:n #1
   {
     \int_compare:nNnTF { \str_count:n {#1} } = { 8 }
