--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -579,7 +579,7 @@
 % since \TeX{} doesn't let us produce arbitrary characters).  Method:
 % \begin{itemize}
 %   \item Turn the token list to a string with category other spaces
-%     (with \cs{__str_to_other:n} from the \pkg{l3str} bundle).
+%     (with \cs{__kernel_str_to_other:n} from the \pkg{l3str} bundle).
 %   \item Convert each character to its value to get a clist of
 %     integers.
 %   \item In the same pass, detect characters with character code
