--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -1083,7 +1083,7 @@
 \cs_new:Npn \@@_python:n #1
   {
     \exp_last_unbraced:Nf \@@_python_auxi:NN
-      \__str_to_other:n {#1} \s_stop \s_stop {#1}
+      \__kernel_str_to_other:n {#1} \s_stop \s_stop {#1}
   }
 \cs_new:Npx \@@_python_auxi:NN #1#2
   {
@@ -1224,13 +1224,13 @@
 %   that |f|-expanding \meta{function} \Arg{other string}
 %   \meta{arguments} yields the piece of the \meta{other string} that we
 %   want to output.  The \meta{other string} is built from the
-%   \meta{token list} by |f|-expanding \cs{__str_to_other:n}.
+%   \meta{token list} by |f|-expanding \cs{__kernel_str_to_other:n}.
 %    \begin{macrocode}
 \cs_new:Npn \@@_tl_s:NNnnNNn #1#2#3#4#5#6#7
   {
     \exp_args:Nc \exp_args:Nf
       { @@_align_#6:nnnN }
-      { \exp_args:Nf #2 { \__str_to_other:n {#7} } #3 }
+      { \exp_args:Nf #2 { \__kernel_str_to_other:n {#7} } #3 }
       { }
       {#4} #5
   }
