Drop a comment [ci skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3722,8 +3722,7 @@
 %   numeral |1|--|4| to indicate the nature of the returned value. Note that
 %   this code covers the full range even though at this stage it is not
 %   required here. Also note that longer-term this is likely to need a public
-%   interface and/or moving to \pkg{l3str} (see experimental string
-%   conversions). In terms of the algorithm itself, see
+%   interface. In terms of the algorithm itself, see
 %   \url{https://en.wikipedia.org/wiki/UTF-8} for the octet pattern.
 %    \begin{macrocode}
 \cs_new:Npn \__unicode_codepoint_to_UTFviii:n #1
