Missed a \__str_to_other

--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -683,7 +683,7 @@
   {
     \group_begin:
       #1
-      \tl_gset:Nx \g_@@_result_tl { \@@_to_other_fast:n {#4} }
+      \tl_gset:Nx \g_@@_result_tl { \__kernel_str_to_other_fast:n {#4} }
       \exp_after:wN \@@_convert:wwwnn
         \tl_to_str:n {#5} /// \q_stop
         { decode } { unescape }
