Put some docs back

--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -447,6 +447,54 @@
 %   A permanently-empty property list used for internal comparisons.
 % \end{variable}
 %
+% \section{Internal property list functions}
+%
+% \begin{variable}{\s__prop}
+%   The internal token used at the beginning of property lists.  This is
+%   also used after each \meta{key} (see \cs{__prop_pair:wn}).
+% \end{variable}
+%
+% \begin{variable}{\__prop_pair:wn}
+%   \begin{syntax}
+%     \cs{__prop_pair:wn} \meta{key} \cs{s__prop} \Arg{item}
+%   \end{syntax}
+%   The internal token used to begin each key--value pair in the
+%   property list.  If expanded outside of a mapping or manipulation
+%   function, an error is raised.  The definition should always be
+%   set globally.
+% \end{variable}
+%
+% \begin{variable}{\l__prop_internal_tl}
+%   Token list used to store new key--value pairs to be inserted by
+%   functions of the \cs{prop_put:Nnn} family.
+% \end{variable}
+%
+% \begin{function}[updated = 2013-01-08]{\__prop_split:NnTF}
+%   \begin{syntax}
+%     \cs{__prop_split:NnTF} \meta{property list} \Arg{key} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Splits the \meta{property list} at the \meta{key}, giving three
+%   token lists: the \meta{extract} of \meta{property list} before the
+%   \meta{key}, the \meta{value} associated with the \meta{key} and the
+%   \meta{extract} of the \meta{property list} after the \meta{value}.
+%   Both \meta{extracts} retain the internal structure of a property
+%   list, and the concatenation of the two \meta{extracts} is a
+%   property list.
+%   If the \meta{key} is present in the \meta{property list} then the
+%   \meta{true code} is left in the input stream, with |#1|, |#2|, and
+%   |#3| replaced by the first \meta{extract}, the \meta{value}, and the
+%   second extract.
+%   If the \meta{key} is not present in the \meta{property list} then
+%   the \meta{false code} is left in the input stream, with no trailing
+%   material.
+%   Both \meta{true code} and \meta{false code} are used in the
+%   replacement text of a macro defined internally, hence macro
+%   parameter characters should be doubled, except |#1|, |#2|, and |#3|
+%   which stand in the \meta{true code} for the three extracts from the
+%   property list.
+%   The \meta{key} comparison takes place as described for \cs{str_if_eq:nn}.
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
