--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1159,6 +1159,17 @@
 %   error.
 % \end{function}
 %
+% \begin{function}[EXP]{\__cs_count_signature:N, \__cs_count_signature:c}
+%   \begin{syntax}
+%     \cs{__cs_count_signature:N} \meta{function}
+%   \end{syntax}
+%   Splits the \meta{function} into the \meta{name} (\emph{i.e.}~the part
+%   before the colon) and the \meta{signature} (\emph{i.e.}~after the colon).
+%   The \meta{number} of tokens in the \meta{signature} is then left in
+%   the input stream. If there was no \meta{signature} then the result is
+%   the marker value $-1$.
+% \end{function}
+%
 % \begin{function}[EXP]{\__cs_split_function:NN}
 %   \begin{syntax}
 %     \cs{__cs_split_function:NN} \meta{function} \meta{processor}
@@ -1173,6 +1184,33 @@
 %   \meta{signature} are made up of tokens with category code $12$
 %   (other). The \meta{processor} should be a function with argument
 %   specification \texttt{:nnN} (plus any trailing arguments needed).
+% \end{function}
+%
+% \begin{function}[EXP]{\__cs_get_function_name:N}
+%   \begin{syntax}
+%     \cs{__cs_get_function_name:N} \meta{function}
+%   \end{syntax}
+%   Splits the \meta{function} into the \meta{name} (\emph{i.e.}~the part
+%   before the colon) and the \meta{signature} (\emph{i.e.}~after the colon).
+%   The \meta{name} is then left in the input stream without the escape
+%   character present made up of tokens with category code $12$
+%   (other).
+% \end{function}
+%
+% \begin{function}[EXP]{\__cs_get_function_signature:N}
+%   \begin{syntax}
+%     \cs{__cs_get_function_signature:N} \meta{function}
+%   \end{syntax}
+%   Splits the \meta{function} into the \meta{name} (\emph{i.e.}~the part
+%   before the colon) and the \meta{signature} (\emph{i.e.}~after the colon).
+%   The \meta{signature} is then left in the input stream made up of
+%   tokens with category code $12$ (other).
+% \end{function}
+%
+% \begin{function}{\__cs_tmp:w}
+%   Function used for various short-term usages, for instance defining
+%   functions whose definition involves tokens which are hard to insert
+%   normally (spaces, characters with category other).
 % \end{function}
 %
 % \begin{function}{\__kernel_debug:TF}
