--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1150,16 +1150,7 @@
 %
 % \section{Internal kernel functions}
 %
-% \begin{function}{\__kernel_chk_if_free_cs:N, \__kernel_chk_if_free_cs:c}
-%   \begin{syntax}
-%     \cs{__kernel_chk_if_free_cs:N} \meta{cs}
-%   \end{syntax}
-%   This function checks that \meta{cs} is free according to the
-%   criteria for \cs{cs_if_free_p:N}, and if not raises a kernel-level
-%   error.
-% \end{function}
-%
-% \begin{function}[EXP]{\__cs_count_signature:N, \__cs_count_signature:c}
+% \begin{function}{\__cs_count_signature:N}
 %   \begin{syntax}
 %     \cs{__cs_count_signature:N} \meta{function}
 %   \end{syntax}
@@ -1211,179 +1202,6 @@
 %   Function used for various short-term usages, for instance defining
 %   functions whose definition involves tokens which are hard to insert
 %   normally (spaces, characters with category other).
-% \end{function}
-%
-% \begin{function}{\__kernel_debug:TF}
-%   \begin{syntax}
-%     \cs{__kernel_debug:TF} \Arg{true code} \Arg{false code}
-%   \end{syntax}
-%   Runs the \meta{true code} if debugging is enabled, namely only in
-%   \LaTeXe{} package mode with one of the options
-%   \texttt{check-declarations}, \texttt{enable-debug}, or
-%   \texttt{log-functions}.  Otherwise runs the \meta{false code}.  The
-%   |T| and |F| variants are not provided for this low-level
-%   conditional.
-% \end{function}
-%
-% \begin{function}{\__kernel_chk_cs_exist:N, \__kernel_chk_cs_exist:c}
-%   \begin{syntax}
-%     \cs{__kernel_chk_cs_exist:N} \meta{cs}
-%   \end{syntax}
-%   This function is only created if debugging is enabled.  It checks
-%   that \meta{cs} exists according to the criteria for
-%   \cs{cs_if_exist_p:N}, and if not raises a kernel-level error.
-% \end{function}
-%
-% \begin{function}{\__kernel_chk_expr:nNnN}
-%   \begin{syntax}
-%     \cs{__kernel_chk_expr:nNnN} \Arg{expr} \meta{eval} \Arg{convert} \meta{caller}
-%   \end{syntax}
-%   This function is only created if debugging is enabled.  By default
-%   it is equivalent to \cs{use_i:nnnn}.  When expression checking is
-%   enabled, it leaves in the input stream the result of \cs{tex_the:D}
-%   \meta{eval} \meta{expr} \cs{tex_relax:D} after checking that no
-%   token was left over.  If any token was not taken as part of the
-%   expression, there is an error message displaying the result of the
-%   evaluation as well as the \meta{caller}.  For instance \meta{eval}
-%   can be \cs{__int_eval:w} and \meta{caller} can be \cs{int_eval:n} or
-%   \cs{int_set:Nn}.  The argument \meta{convert} is empty except for mu
-%   expressions where it is \cs{etex_mutoglue:D}, used for internal
-%   purposes.
-% \end{function}
-%
-% \begin{function}{\__kernel_chk_var_exist:N}
-%   \begin{syntax}
-%     \cs{__kernel_chk_var_exist:N} \meta{var}
-%   \end{syntax}
-%   This function is only created if debugging is enabled.  It checks
-%   that \meta{var} is defined according to the criteria for
-%   \cs{cs_if_exist_p:N}, and if not raises a kernel-level error.
-% \end{function}
-%
-% \begin{function}{\__kernel_chk_var_scope:NN}
-%   \begin{syntax}
-%     \cs{__kernel_chk_var_scope:NN} \meta{scope} \meta{var}
-%   \end{syntax}
-%   Checks the \meta{var} has the correct \meta{scope}, and if not
-%   raises a kernel-level error.  This function is only created if
-%   debugging is enabled.  The \meta{scope} is a single letter |l|, |g|,
-%   |c| denoting local variables, global variables, or constants.  More
-%   precisely, if the variable name starts with a letter and an
-%   underscore (normal \pkg{expl3} convention) the function checks that
-%   this single letter matches the \meta{scope}.  Otherwise the function
-%   cannot know the scope \meta{var} the first time: instead, it defines
-%   |\__debug_chk_/|\meta{var name} to store that information for the
-%   next call.  Thus, if a given \meta{var} is subject to assignments of
-%   different scopes a kernel error will result.
-% \end{function}
-%
-% \begin{function}{\__kernel_chk_var_local:N, \__kernel_chk_var_global:N}
-%   \begin{syntax}
-%     \cs{__kernel_chk_var_local:N} \meta{var}
-%     \cs{__kernel_chk_var_global:N} \meta{var}
-%   \end{syntax}
-%   Applies \cs{__kernel_chk_var_exist:N} \meta{var}, then
-%   \cs{__kernel_chk_var_scope:NN} \meta{scope} \meta{var}, where
-%   \meta{scope} is |l| or~|g|.
-% \end{function}
-%
-% \begin{function}{\__kernel_debug_log:x}
-%   \begin{syntax}
-%     \cs{__kernel_debug_log:x} \Arg{message text}
-%   \end{syntax}
-%   If the \texttt{log-functions} option is active, this function writes
-%   the \meta{message text} to the log file using \cs{iow_log:x}.
-%   Otherwise, the \meta{message text} is ignored using \cs{use_none:n}.
-%   This function is only created if debugging is enabled.
-% \end{function}
-%
-% \begin{function}{\__kernel_patch:nnNNpn}
-%   \begin{syntax}
-%     \cs{__kernel_patch:nnNNpn} \Arg{before} \Arg{after}
-%     \meta{definition} \meta{function} \meta{parameters} \Arg{code}
-%   \end{syntax}
-%   If debugging is not enabled, this function ignores the \meta{before}
-%   and \meta{after} code and performs the \meta{definition} with no
-%   patching.  Otherwise it replaces \meta{code} by \meta{before}
-%   \meta{code} \meta{after} (which can involve |#1| and so on) in the
-%   \meta{definition} that follows.  The \meta{definition} must start
-%   with \cs{cs_new:Npn} or \cs{cs_set:Npn} or \cs{cs_gset:Npn} or their
-%   \texttt{_protected} counterparts.  Other cases can be added as
-%   needed.
-% \end{function}
-%
-% \begin{function}{\__kernel_patch_conditional:nNNpnn}
-%   \begin{syntax}
-%     \cs{__kernel_patch_conditional:nNNpnn} \Arg{before}
-%     \meta{definition} \meta{conditional} \meta{parameters} \Arg{type} \Arg{code}
-%   \end{syntax}
-%   Similar to \cs{__kernel_patch:nnNNpn} for conditionals, namely
-%   \meta{definition} must be \cs{prg_new_conditional:Npnn} or its
-%   \texttt{_protected} counterpart.  There is no \meta{after} code
-%   because that would interfere with the action of the conditional.
-% \end{function}
-%
-% \begin{function}
-%   {\__kernel_patch_args:nNNpn, \__kernel_patch_conditional_args:nNNpnn}
-%   \begin{syntax}
-%     \cs{__kernel_patch_args:nNNpn} \Arg{arguments}
-%     \meta{definition} \meta{function} \meta{parameters} \Arg{code}
-%   \end{syntax}
-%   Like \cs{__kernel_patch:nnNNpn}, this tweaks the following
-%   definition, but from the \enquote{inside out} (and if debugging is
-%   not enabled, the \meta{arguments} are ignored).  It replaces |#1|,
-%   |#2| and so on in the \meta{code} of the definition as indicated by
-%   the \meta{arguments}.  More precisely, a temporary function is
-%   defined using the \meta{definition} with the \meta{parameters} and
-%   \meta{code}, then the result of expanding that function once in
-%   front of the \meta{arguments} is used instead of the \meta{code}
-%   when defining the actual function.  For instance,
-%   \begin{quote}
-%     \cs{__kernel_patch_args:nNNpn} |{ { (#1) } }| \\
-%     \cs{cs_new:Npn} \cs{int_eval:n} |#1| \\
-%     ~~|{ \int_value:w \__int_eval:w #1 \__int_eval_end: }|
-%   \end{quote}
-%   would replace |#1| by |(#1)| in the definition of \cs{int_eval:n} when
-%   debugging is enabled.  This fails if the \meta{code} contains~|##|.
-%   The \cs{__kernel_patch_conditional_args:nNNpnn} function is for use
-%   before \cs{prg_new_conditional:Npnn} or its \texttt{_protected}
-%   counterpart.
-% \end{function}
-%
-% \begin{function}
-%   {\__kernel_patch_args:nnnNNpn, \__kernel_patch_conditional_args:nnnNNpnn}
-%   \begin{syntax}
-%     \cs{__kernel_patch_args:nnnNNpn} \Arg{before} \Arg{after} \Arg{arguments}
-%     \meta{definition} \meta{function} \meta{parameters} \Arg{code}
-%   \end{syntax}
-%   A combination of \cs{__kernel_patch:nnNNpn} and
-%   \cs{__kernel_patch_args:nNNpn}.
-% \end{function}
-%
-% \begin{function}{\__kernel_check_defined:NT}
-%   \begin{syntax}
-%     \cs{__kernel_check_defined:NT} \meta{variable} \Arg{true code}
-%   \end{syntax}
-%   If \meta{variable} is not defined (according to
-%   \cs{cs_if_exist:NTF}), this triggers an error, otherwise the
-%   \meta{true code} is run.
-% \end{function}
-%
-% \begin{function}{\__kernel_register_show:N, \__kernel_register_show:c}
-%   \begin{syntax}
-%     \cs{__kernel_register_show:N} \meta{register}
-%   \end{syntax}
-%   Used to show the contents of a \TeX{} register at the terminal, formatted
-%   such that internal parts of the mechanism are not visible.
-% \end{function}
-%
-% \begin{function}[updated = 2015-08-03]
-%   {\__kernel_register_log:N, \__kernel_register_log:c}
-%   \begin{syntax}
-%     \cs{__kernel_register_log:N} \meta{register}
-%   \end{syntax}
-%   Used to write the contents of a \TeX{} register to the log file in a
-%   form similar to \cs{__kernel_register_show:N}.
 % \end{function}
 %
 % \end{documentation}
