Rename an internal
This shows up when you have everything together.

--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -231,7 +231,7 @@
 \cs_new_protected:Npn \flag_log:n { \@@_show:Nn \tl_log:n }
 \cs_new_protected:Npn \@@_show:Nn #1#2
   {
-    \exp_args:Nc \__kernel_check_defined:NT { flag~#2 }
+    \exp_args:Nc \__kernel_chk_defined:NT { flag~#2 }
       {
         \exp_args:Nx #1
           { \tl_to_str:n { flag~#2~height } = \flag_height:n {#2} }
