--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -74,9 +74,9 @@
 %   \cs{cs_if_exist_p:N}, and if not raises a kernel-level error.
 % \end{function}
 %
-% \begin{function}{\__kernel_check_defined:NT}
+% \begin{function}{\__kernel_chk_defined:NT}
 %   \begin{syntax}
-%     \cs{__kernel_check_defined:NT} \meta{variable} \Arg{true code}
+%     \cs{__kernel_chk_defined:NT} \meta{variable} \Arg{true code}
 %   \end{syntax}
 %   If \meta{variable} is not defined (according to
 %   \cs{cs_if_exist:NTF}), this triggers an error, otherwise the
