--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -929,7 +929,7 @@
 \cs_generate_variant:Nn \bool_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_check_defined:NT #2
+    \__kernel_chk_defined:NT #2
       { \exp_args:Nx #1 { \token_to_str:N #2 = \@@_to_str:n {#2} } }
   }
 %    \end{macrocode}
