--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -3317,7 +3317,7 @@
   { \exp_args:Nc \@@_register_log:N }
 \cs_new_protected:Npn \@@_register_show_aux:NN #1#2
   {
-    \@@_check_defined:NT #2
+    \@@_chk_defined:NT #2
       {
         \exp_args:No \@@_register_show_aux:nNN
           { \tex_the:D #2 } #2 #1
