Some doc rearrangements [ci skip]

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1148,7 +1148,7 @@
 %     \msg_show:nnxx   ,
 %     \msg_show:nnx
 %   }
-% \begin{macro}[aux]{\@@_show:n, \@@_show:w, \@@_show_dot:w, \@@_show:nn}
+% \begin{macro}{\@@_show:n, \@@_show:w, \@@_show_dot:w, \@@_show:nn}
 %   The \texttt{show} message type is used for \cs{seq_show:N} and
 %   similar complicated data structures.  Wrap the given text with a
 %   trailing dot (important later) then pass it to \cs{@@_show:n}.  If
