--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1151,6 +1151,16 @@
 %   (\enquote{active}), and character code $32$ (space).
 % \end{variable}
 %
+% \begin{function}[added = 2018-04-02]{\char_codepoint_to_bytes:n}
+%   \begin{syntax}
+%     \cs{char_codepoint_to_bytes:n} \Arg{codepoint}
+%   \end{syntax}
+%   Converts the (Unicode) \meta{codepoint} to UTF-8 bytes. The expansion
+%   of this function comprises a leading integer (|1|--|4|) followed by the
+%   appropriate number of brace groups, each of which contains one byte of
+%   the UTF-8 sequence for the codepoint.
+% \end{function}
+%
 % \begin{function}[TF, updated = 2012-12-20]{\peek_N_type:}
 %   \begin{syntax}
 %     \cs{peek_N_type:TF} \Arg{true code} \Arg{false code}
@@ -2774,6 +2784,70 @@
 % appropriate data extracted from the Unicode documentation (either manually
 % or automatically).
 %
+% First, some code which \enquote{belongs} in \pkg{l3tokens} but has to come
+% here.
+%    \begin{macrocode}
+%<@@=char>
+%    \end{macrocode}
+%
+% \begin{macro}[EXP]{\char_codepoint_to_bytes:n}
+% \begin{macro}[EXP]{\@@_codepoint_to_bytes_auxi:n}
+% \begin{macro}[EXP]{\@@_codepoint_to_bytes_auxii:Nnn}
+% \begin{macro}[EXP]{\@@_codepoint_to_bytes_auxiii:n}
+%   This code converts a codepoint into the correct UTF-8 representation.
+%   As there are a variable number of octets, the result starts with the
+%   numeral |1|--|4| to indicate the nature of the returned value.
+%   In terms of the algorithm itself, see
+%   \url{https://en.wikipedia.org/wiki/UTF-8} for the octet pattern.
+%    \begin{macrocode}
+\cs_new:Npn \char_codepoint_to_bytes:n #1
+  {
+    \exp_args:Nf \@@_codepoint_to_bytes_auxi:n
+      { \int_eval:n {#1} }
+  }
+\cs_new:Npn \@@_codepoint_to_bytes_auxi:n #1
+  {
+    \if_int_compare:w #1 > "80 \exp_stop_f:
+      \if_int_compare:w #1 < "800 \exp_stop_f:
+        2
+        \@@_codepoint_to_bytes_auxii:Nnn C {#1} { 64 }
+        \@@_codepoint_to_bytes_auxiii:n {#1}
+      \else:
+        \if_int_compare:w #1 < "10000 \exp_stop_f:
+          3
+          \@@_codepoint_to_bytes_auxii:Nnn E {#1} { 64 * 64 }
+          \@@_codepoint_to_bytes_auxiii:n {#1}
+          \@@_codepoint_to_bytes_auxiii:n
+            { \int_div_truncate:nn {#1} { 64 } }
+        \else:
+          4
+          \@@_codepoint_to_bytes_auxii:Nnn F
+            {#1} { 64 * 64 * 64 }
+          \@@_codepoint_to_bytes_auxiii:n
+            { \int_div_truncate:nn {#1} { 64 * 64 } }
+          \@@_codepoint_to_bytes_auxiii:n
+            { \int_div_truncate:nn {#1} { 64 } }
+          \@@_codepoint_to_bytes_auxiii:n {#1}
+        \fi:
+      \fi:
+    \else:
+      1 {#1}
+    \fi:
+  }
+\cs_new:Npn \@@_codepoint_to_bytes_auxii:Nnn #1#2#3
+  { { \int_eval:n { "#10 + \int_div_truncate:nn {#2} {#3} } } }
+\cs_new:Npn \@@_codepoint_to_bytes_auxiii:n #1
+  { { \int_eval:n { \int_mod:nn {#1} { 64 } + 128 } } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+%    \begin{macrocode}
+%<@@=tl>
+%    \end{macrocode}
+%
 % \begin{macro}[EXP, documented-as=\tl_if_head_eq_catcode:nNTF]
 %   {\tl_if_head_eq_catcode:oNTF}
 %   Extra variants.
@@ -3713,63 +3787,6 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\__unicode_codepoint_to_UTFviii:n}
-% \begin{macro}[EXP]{\__unicode_codepoint_to_UTFviii_auxi:n}
-% \begin{macro}[EXP]{\__unicode_codepoint_to_UTFviii_auxii:Nnn}
-% \begin{macro}[EXP]{\__unicode_codepoint_to_UTFviii_auxiii:n}
-%   This code converts a codepoint into the correct UTF-8 representation.
-%   As there are a variable number of octets, the result starts with the
-%   numeral |1|--|4| to indicate the nature of the returned value. Note that
-%   this code covers the full range even though at this stage it is not
-%   required here. Also note that longer-term this is likely to need a public
-%   interface. In terms of the algorithm itself, see
-%   \url{https://en.wikipedia.org/wiki/UTF-8} for the octet pattern.
-%    \begin{macrocode}
-\cs_new:Npn \__unicode_codepoint_to_UTFviii:n #1
-  {
-    \exp_args:Nf \__unicode_codepoint_to_UTFviii_auxi:n
-      { \int_eval:n {#1} }
-  }
-\cs_new:Npn \__unicode_codepoint_to_UTFviii_auxi:n #1
-  {
-    \if_int_compare:w #1 > "80 \exp_stop_f:
-      \if_int_compare:w #1 < "800 \exp_stop_f:
-        2
-        \__unicode_codepoint_to_UTFviii_auxii:Nnn C {#1} { 64 }
-        \__unicode_codepoint_to_UTFviii_auxiii:n {#1}
-      \else:
-        \if_int_compare:w #1 < "10000 \exp_stop_f:
-          3
-          \__unicode_codepoint_to_UTFviii_auxii:Nnn E {#1} { 64 * 64 }
-          \__unicode_codepoint_to_UTFviii_auxiii:n {#1}
-          \__unicode_codepoint_to_UTFviii_auxiii:n
-            { \int_div_truncate:nn {#1} { 64 } }
-        \else:
-          4
-          \__unicode_codepoint_to_UTFviii_auxii:Nnn F
-            {#1} { 64 * 64 * 64 }
-          \__unicode_codepoint_to_UTFviii_auxiii:n
-            { \int_div_truncate:nn {#1} { 64 * 64 } }
-          \__unicode_codepoint_to_UTFviii_auxiii:n
-            { \int_div_truncate:nn {#1} { 64 } }
-          \__unicode_codepoint_to_UTFviii_auxiii:n {#1}
-
-        \fi:
-      \fi:
-    \else:
-      1 {#1}
-    \fi:
-  }
-\cs_new:Npn \__unicode_codepoint_to_UTFviii_auxii:Nnn #1#2#3
-  { { \int_eval:n { "#10 + \int_div_truncate:nn {#2} {#3} } } }
-\cs_new:Npn \__unicode_codepoint_to_UTFviii_auxiii:n #1
-  { { \int_eval:n { \int_mod:nn {#1} { 64 } + 128 } } }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-% \end{macro}
-%
 % \begin{variable}
 %   {
 %     \c_@@_std_sigma_tl    ,
@@ -3838,7 +3855,7 @@
                   }
               }
             \tl_set:Nx \l_@@_internal_a_tl
-              { \__unicode_codepoint_to_UTFviii:n {"#2} }
+              { \char_codepoint_to_bytes:n {"#2} }
             \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
           \group_end:
         }
@@ -3867,8 +3884,8 @@
           \quark_if_recursion_tail_stop:n {#1}
           \tl_set:Nx \l_@@_internal_a_tl
             {
-              \__unicode_codepoint_to_UTFviii:n {"#1}
-              \__unicode_codepoint_to_UTFviii:n {"#2}
+              \char_codepoint_to_bytes:n {"#1}
+              \char_codepoint_to_bytes:n {"#2}
             }
           \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
           \@@_loop:nn
@@ -4019,7 +4036,7 @@
                     {#2}
               }
             \tl_set:Nx \l_@@_internal_a_tl
-              { \__unicode_codepoint_to_UTFviii:n { "#1 } }
+              { \char_codepoint_to_bytes:n { "#1 } }
             \exp_after:wN \@@_tmp:w \l_@@_internal_a_tl
           \group_end:
         }
@@ -4579,7 +4596,7 @@
 % \subsection{Additions to \pkg{l3token}}
 %
 % \begin{variable}{\c_catcode_active_space_tl}
-%   While \cs{__char_generate:nn} can produce active characters in some
+%   While \cs{__kernel_char_generate:nn} can produce active characters in some
 %   engines it cannot in general.  It would be possible to simply change
 %   the catcode of space but then the code would need to avoid all
 %   spaces, making it quite unreadable.  Instead we use the primitive
