--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1648,7 +1648,7 @@
 % \begin{macro}[EXP]{\@@_count:n}
 % \begin{macro}[EXP]{\@@_count_aux:n, \@@_count_loop:NNNNNNNNN}
 %   To count characters in a string we could first escape all spaces
-%   using \cs{_-kernel_str_to_other:n}, then pass the result to \cs{tl_count:n}.
+%   using \cs{__kernel_str_to_other:n}, then pass the result to \cs{tl_count:n}.
 %   However, the escaping step would be quadratic in the number of
 %   characters in the string, and we can do better.  Namely, sum the
 %   number of spaces (\cs{str_count_spaces:n}) and the result of
