Implement \seq_set_int_step:Nnnnn and use it to avoid __seq usage

--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -107,6 +107,13 @@
 %
 % \subsection{Variables}
 %
+% \begin{variable}{\g_@@_internal_seq}
+%   Used for \cs{seq_sort:Nn} to get the resulting sequence out of a group.
+%    \begin{macrocode}
+\seq_new:N \g_@@_internal_seq
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}
 %   {
 %     \l_@@_length_int, \l_@@_min_int, \l_@@_top_int, \l_@@_max_int,
@@ -303,7 +310,7 @@
 %
 % \subsection{Protected user commands}
 %
-% \begin{macro}{\@@_main:NNNnNn}
+% \begin{macro}{\@@_main:NNNnNn, \@@_main:NNNn}
 %   Sorting happens in three steps. First store items in \tn{toks}
 %   registers ranging from \cs{l_@@_min_int} to $\cs{l_@@_top_int}-1$,
 %   while checking that the list is not too
@@ -318,66 +325,73 @@
 \cs_new_protected:Npn \@@_main:NNNnNn #1#2#3#4#5#6
   {
     \group_begin:
-%<package>      \@@_disable_toksdef:
-      \@@_compute_range:
-      \int_set_eq:NN \l_@@_top_int \l_@@_min_int
-      #2 #5
-        {
-          \if_int_compare:w \l_@@_top_int = \l_@@_max_int
-            \@@_too_long_error:NNw #3 #5
-          \fi:
-          \tex_toks:D \l_@@_top_int {##1}
-          \int_incr:N \l_@@_top_int
-        }
-      \int_set:Nn \l_@@_length_int
-        { \l_@@_top_int - \l_@@_min_int }
-      \cs_set:Npn \@@_compare:nn ##1 ##2 { #6 }
-      \int_set:Nn \l_@@_block_int { 1 }
-      \@@_level:
+      \@@_main:NNNn #2 #3 #5 {#6}
       \use:x
         {
           \group_end:
           #1 \exp_not:N #5 {#4}
         }
+    \prg_break_point:
+  }
+\cs_new_protected:Npn \@@_main:NNNn #1#2#3#4
+  {
+%<package>    \@@_disable_toksdef:
+    \@@_compute_range:
+    \int_set_eq:NN \l_@@_top_int \l_@@_min_int
+    #1 #3
+      {
+        \if_int_compare:w \l_@@_top_int = \l_@@_max_int
+          \@@_too_long_error:NNw #2 #3
+        \fi:
+        \tex_toks:D \l_@@_top_int {##1}
+        \int_incr:N \l_@@_top_int
+      }
+    \int_set:Nn \l_@@_length_int
+      { \l_@@_top_int - \l_@@_min_int }
+    \cs_set:Npn \@@_compare:nn ##1 ##2 {#4}
+    \int_set:Nn \l_@@_block_int { 1 }
+    \@@_level:
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\seq_sort:Nn, \seq_gsort:Nn}
-%   The first argument to \cs{@@_main:NNNnNn} is the final
-%   assignment function used, either \cs{tl_set:Nn} or
-%   \cs{tl_gset:Nn} to control local versus global results.
-%   The second argument is what mapping function is used when storing
-%   items to \tn{toks} registers, and the third breaks away from the
-%   loop. The fourth is used to build back the correct kind of list
-%   from the contents of the \tn{toks} registers, including the leading
-%   \cs{s__seq}.  Fifth and sixth
-%   arguments are the variable to sort, and the sorting method
-%   as inline code.
+% \begin{macro}{\seq_sort:Nn, \seq_sort:cn, \seq_gsort:Nn, \seq_gsort:cn}
+% \begin{macro}{\@@_seq:NNn}
+%   The first argument to \cs{@@_main:NNNn} is what mapping function is
+%   used when storing items to \tn{toks} registers, and the second
+%   breaks away from the loop. The third and fourth arguments are the
+%   variable to sort, and the sorting method as inline code.  At the
+%   end, extract the \tn{toks} registers as items in
+%   \cs{g_@@_internal_seq} and copy that to the target variable locally
+%   or globally.
 %    \begin{macrocode}
-\cs_new_protected:Npn \seq_sort:Nn
-  {
-    \@@_main:NNNnNn \tl_set:Nn
-      \seq_map_inline:Nn \seq_map_break:n
-      { \s__seq \@@_toks:NN \exp_not:N \__seq_item:n }
-  }
+\cs_new_protected:Npn \seq_sort:Nn { \@@_seq:NNn \seq_set_eq:NN }
 \cs_generate_variant:Nn \seq_sort:Nn { c }
-\cs_new_protected:Npn \seq_gsort:Nn
-  {
-    \@@_main:NNNnNn \tl_gset:Nn
-      \seq_map_inline:Nn \seq_map_break:n
-      { \s__seq \@@_toks:NN \exp_not:N \__seq_item:n }
-  }
+\cs_new_protected:Npn \seq_gsort:Nn { \@@_seq:NNn \seq_gset_eq:NN }
 \cs_generate_variant:Nn \seq_gsort:Nn { c }
+\cs_new_protected:Npn \@@_seq:NNn #1#2#3
+  {
+    \group_begin:
+      \@@_main:NNNn \seq_map_inline:Nn \seq_map_break:n #2 {#3}
+      \seq_gset_int_step:Nnnnn \g_@@_internal_seq
+        { \l_@@_min_int }
+        { 1 }
+        { \l_@@_top_int - 1 }
+        { \tex_the:D \tex_toks:D ##1 }
+    \group_end:
+    #1 #2 \g_@@_internal_seq
+    \seq_gclear:N \g_@@_internal_seq
+    \prg_break_point:
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\tl_sort:Nn, \tl_sort:cn, \tl_gsort:Nn, \tl_gsort:cn}
 %   Again, use \cs{tl_set:Nn} or \cs{tl_gset:Nn} to control
 %   the scope of the assignment. Mapping through the token
 %   list is done with \cs{tl_map_inline:Nn}, and producing
-%   the token list is very similar to sequences, removing
-%   \cs{__seq_item:n}.
+%   the token list is done by \cs{@@_toks:NN}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_sort:Nn
   {
@@ -447,10 +461,8 @@
 % \begin{macro}{\@@_toks:NN, \@@_toks:NNw}
 %   Unpack the various \tn{toks} registers, from \cs{l_@@_min_int} to
 %   $\cs{l_@@_top_int}-1$. The functions |#1| and |#2| allow us to treat
-%   the three data structures in a unified way:
+%   |tl| and |clist| in a unified way:
 %   \begin{itemize}
-%   \item for sequences, they are \cs{exp_not:N} \cs{__seq_item:n},
-%     expanding to the \cs{__seq_item:n} separator, as expected;
 %   \item for token lists, they expand to nothing;
 %   \item for comma lists, they expand to \cs{exp_args:No}
 %     \cs{@@_clist_wrap_item:n}, taking care of unpacking the register
@@ -998,14 +1010,14 @@
 % \begin{macro}{\@@_error:}
 %   Bailing out of the sorting code is a bit tricky.  It may not be safe
 %   to use a delimited argument, so instead we redefine many
-%   \pkg{l3sort} commands to be trivial, with \cs{@@_level:} getting rid
-%   of the final assignment.  This error recovery won't work in a group.
+%   \pkg{l3sort} commands to be trivial, with \cs{@@_level:} jumping to
+%   the break point.  This error recovery won't work in a group.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_error:
   {
     \cs_set_eq:NN \@@_merge_blocks_aux: \prg_do_nothing:
     \cs_set_eq:NN \@@_merge_blocks: \prg_do_nothing:
-    \cs_set_protected:Npn \@@_level: \use:x ##1 { \group_end: }
+    \cs_set_protected:Npn \@@_level: { \group_end: \prg_break: }
   }
 %    \end{macrocode}
 % \end{macro}
