Nesting issue [ci skip]

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2789,7 +2789,6 @@
 %     \tl_gset_from_file_x:Nnn, \tl_gset_from_file_x:cnn
 %   }
 % \begin{macro}{\@@_set_from_file_x:NNnn}
-% \begin{variable}{\l_@@_file_name_str}
 %   When reading a file and allowing expansion of the content, the set up
 %   only needs to prevent \TeX{} complaining about the end of the file. That
 %   is done simply, with a group then used to trap the definition needed.
@@ -2817,11 +2816,14 @@
         #1 #2 \l_@@_internal_a_tl
       }
   }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \begin{variable}{\l_@@_file_name_str}
+%    \begin{macrocode}
 \str_new:N \l_@@_file_name_str
 %    \end{macrocode}
 % \end{variable}
-% \end{macro}
-% \end{macro}
 %
 % \subsubsection{Unicode case changing}
 %
