--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2431,6 +2431,7 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{function}
 % \begin{syntax}
 %     \cs{seq_set_int_step:Nnnnn} \meta{seq~var} \Arg{initial value} \Arg{step} \Arg{final value} \Arg{inline code}
 %   \end{syntax}
