--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2027,8 +2027,8 @@
     \cs_new:Npn \int_rand:nn #1#2
       {
         \exp_after:wN \@@_rand:ww
-        \@@_value:w \int_eval:n {#1} \exp_after:wN ;
-        \@@_value:w \int_eval:n {#2} ;
+        \int_value:w \int_eval:n {#1} \exp_after:wN ;
+        \int_value:w \int_eval:n {#2} ;
       }
     \cs_new:Npn \@@_rand:ww #1; #2;
       {
