Move definition of \int_rand:nn
This deals with an __ issue, and makes \int_rand:nn stable (seems reasonable).

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -764,6 +764,17 @@
 %   \cs{int_to_Base:nn}.
 % \end{function}
 %
+% \section{Random integers}
+%
+% \begin{function}[EXP, added = 2016-12-06]{\int_rand:nn}
+%   \begin{syntax}
+%     \cs{int_rand:nn} \Arg{intexpr_1} \Arg{intexpr_2}
+%   \end{syntax}
+%   Evaluates the two \meta{integer expressions} and produces a
+%   pseudo-random number between the two (with bounds included).  This
+%   is only available in \pdfTeX{} and \LuaTeX{}.
+% \end{function}
+%
 % \section{Viewing integers}
 %
 % \begin{function}{\int_show:N, \int_show:c}
@@ -2433,6 +2444,12 @@
 \cs_new_protected:Npn \int_log:n
   { \msg_log_eval:Nn \int_eval:n }
 %    \end{macrocode}
+% \end{macro}
+%
+%\subsection{Random integers}
+%
+% \begin{macro}{\int_rand:nn}
+%   Defined in \pkg{l3fp-random}.
 % \end{macro}
 %
 % \subsection{Constant integers}
