--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -87,6 +87,11 @@
         \exp_after:wN \c_nan_fp
       }
     \cs_new_eq:NN \@@_randint_o:Nw \@@_rand_o:Nw
+    \cs_new:Npn \int_rand:nn #1#2
+      {
+        \__kernel_msg_expandable_error:nn { kernel } { fp-no-random }
+        \int_eval:n {#1}
+      }
   }
 \cs_if_exist:NT \pdftex_uniformdeviate:D
   {
@@ -322,6 +327,72 @@
           { \@@_exp_after_o:w #1 ; \exp:w }
       }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\int_rand:nn}
+% \begin{macro}{\@@_randint:ww}
+% \begin{macro}{\@@_randint_narrow:nn}
+% \begin{macro}{\@@_randint_narrow:nnn}
+% \begin{macro}{\@@_randint_narrow:nnnn}
+%   Evaluate the argument and filter out the case where the lower
+%   bound~|#1| is more than the upper bound~|#2|.  Then determine
+%   whether the range is narrower than \cs{c__fp_rand_size_int}; |#2-#1|
+%   may overflow for very large positive~|#2| and negative~|#1|.  If the
+%   range is wide, use slower code from \pkg{l3fp}.  If the range is
+%   narrow, call \cs{@@_randint_narrow:nn} \Arg{choices} |{#1}| where
+%   \meta{choices} is the number of possible outcomes.  Then
+%   \cs{@@_randint_narrow:nnnn} receives a random number reduced modulo
+%   \meta{choices}, the random number itself, \meta{choices} and |#1|.
+%   To avoid bias, throw away the random number if it lies in the last,
+%   incomplete, interval of size \meta{choices} in
+%   $[0,\cs{c_@@_rand_size_int}-1]$, and try again.
+%    \begin{macrocode}
+    \cs_new:Npn \int_rand:nn #1#2
+      {
+        \exp_after:wN \@@_randint:ww
+        \int_value:w \int_eval:n {#1} \exp_after:wN ;
+        \int_value:w \int_eval:n {#2} ;
+      }
+    \cs_new:Npn \@@_randint:ww #1; #2;
+      {
+        \int_compare:nNnTF {#1} > {#2}
+          {
+            \__kernel_msg_expandable_error:nnnn
+              { kernel } { randint-backward-range } {#1} {#2}
+            \@@_randint:ww #2; #1;
+          }
+          {
+            \int_compare:nNnTF {#1} > 0
+              { \int_compare:nNnTF { #2 - #1 } < \c_@@_rand_size_int }
+              { \int_compare:nNnTF {#2} < { #1 + \c_@@_rand_size_int } }
+                  {
+                    \exp_args:Nf \@@_randint_narrow:nn
+                      { \int_eval:n { #2 - #1 + 1 } } {#1}
+                  }
+                  { \fp_to_int:n { randint(#1,#2) } }
+          }
+      }
+    \cs_new:Npn \@@_randint_narrow:nn
+      {
+        \exp_args:No \@@_randint_narrow:nnn
+          { \pdftex_uniformdeviate:D \c_@@_rand_size_int }
+      }
+    \cs_new:Npn \@@_randint_narrow:nnn #1#2
+      {
+        \exp_args:Nf \@@_randint_narrow:nnnn
+          { \int_mod:nn {#1} {#2} } {#1} {#2}
+      }
+    \cs_new:Npn \@@_randint_narrow:nnnn #1#2#3#4
+      {
+        \int_compare:nNnTF { #2 - #1 + #3 } > \c_@@_rand_size_int
+          { \@@_randint_narrow:nn {#3} {#4} }
+          { \int_eval:n { #4 + #1 } }
+      }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
