Implement \exp_args_generate:n to define new \exp_args:N... functions

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -255,6 +255,19 @@
 %   should be defined.
 % \end{function}
 %
+% \begin{function}[added = 2018-04-04]{\exp_args_generate:n}
+%   \begin{syntax}
+%     \cs{exp_args_generate:n} \Arg{variant argument specifiers}
+%   \end{syntax}
+%   Defines \cs[no-index]{exp_args:N\meta{variant}} functions for each
+%   \meta{variant} given in the comma list \Arg{variant argument
+%   specifiers}.  Each \meta{variant} should consist of the letters |N|,
+%   |c|, |n|, |V|, |v|, |o|, |f|, |x|, |p| and the resulting function is
+%   protected if the letter |x| appears in the \meta{variant}.  This is
+%   only useful for cases where \cs{cs_generate_variant:Nn} is not
+%   applicable.
+% \end{function}
+%
 % \section{Additions to \pkg{l3file}}
 %
 % \begin{function}[added = 2017-07-11]{\file_get_mdfive_hash:nN}
