--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -2051,6 +2051,45 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\exp_args_generate:n, \@@_args_generate:Nn}
+% \begin{macro}[EXP]{\@@_args_generate:n}
+%   This function is not used in the kernel hence we can use functions
+%   that are defined in later modules.  It also does not need to be fast
+%   so use inline mappings.  For each requested variant we check that
+%   there are no characters besides |NnpcofVvx|, in particular that
+%   there are no spaces.  Then we loop through the variant specifier and
+%   convert each letter to \cs[no-index]{::\meta{variant letter}}, with a
+%   trailing \cs{:::}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \exp_args_generate:n #1
+  {
+    \exp_args:No \clist_map_inline:nn { \tl_to_str:n {#1} }
+      {
+        \str_map_inline:nn {##1}
+          {
+            \str_if_in:nnF { NnpcofVvx } {####1}
+              {
+                \__kernel_msg_error:nnnn { kernel } { invalid-exp-args }
+                  {####1} {##1}
+                \str_map_break:n { \use_none:nnnn }
+              }
+          }
+        \exp_args:Nc \@@_args_generate:Nn { exp_args:N ##1 } {##1}
+      }
+  }
+\cs_new_protected:Npn \@@_args_generate:Nn #1#2
+  {
+    \cs_if_exist:NF #1
+      {
+        \str_if_in:nnTF {#2} { x } { \cs_new_protected:Npx } { \cs_new:Npx }
+          #1 { \tl_map_function:nN { #2 : } \@@_args_generate:n }
+      }
+  }
+\cs_new:Npn \@@_args_generate:n #1 { \exp_not:c { :: #1 } }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
