--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -452,8 +452,9 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \DocInput{l3color-base.dtx}
 \DocInput{l3sys.dtx}
 \DocInput{l3luatex.dtx}
-\DocInput{l3deprecation.dtx}
+\DocInput{l3unicode.dtx}
 \DocInput{l3candidates.dtx}
+\DocInput{l3deprecation.dtx}
 \DocInput{l3drivers.dtx}
 
 \endinput
