Always create \g__file_internal_ior
This avoids some issues in test files.

Also means that we are in a known state.

--- a/l3kernel/l3unicode.dtx
+++ b/l3kernel/l3unicode.dtx
@@ -69,16 +69,17 @@
 % one-to-one situations and does not fully handle for example case folding.
 %
 % As only the data needs to remain at the end of this process, everything
-% is set up inside a group.
+% is set up inside a group. The only thing that is outside is creating a
+% stream: they are global anyway and it is best to force a stream for
+% all engines.
 %    \begin{macrocode}
+\ior_new:N \g_@@_data_ior
 \bool_lazy_or:nnTF { \sys_if_engine_luatex_p: } { \sys_if_engine_xetex_p: }
   {
     \group_begin:
 %    \end{macrocode}
-%   Set up a stream for reading the data files and set up a private copy of the
-%   char-generation primitive.
+%   Set up a private copy of the char-generation primitive.
 %    \begin{macrocode}
-      \ior_new:N \g_@@_data_ior
       \cs_set_eq:NN \@@_generate:w \utex_char:D
 %    \begin{macrocode}
 % Parse the main Unicode data file for title case exceptions (the one-to-one
@@ -200,7 +201,8 @@
 % set up required. As case changing can only be applied to bytes, and
 % they have to be in the ASCII range, we define a series of data stores
 % to represent them, and the data are used such that only these are
-% ever case-changed.
+% ever case-changed. We do open and close one file to force allocation of
+% a read: this keeps all engines in line.
 %    \begin{macrocode} 
   {
     \group_begin:
@@ -215,6 +217,8 @@
       \@@_tmp:NN
         AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz
         ? \q_recursion_tail \q_recursion_stop
+      \ior_open:Nn \g_@@_data_ior { UnicodeData.txt }
+      \ior_close:N \g_@@_data_ior
     \group_end:
   }
 %    \end{macrocode}
