Simplify code by limiting use of \use:x when setting up definitions
It is often simpler to use finer expansion control, specifically the
surprisingly useful \exp_last_unbraced:NNNNo.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2557,22 +2557,21 @@
 %   auxiliary trims the trailing \cs{q_mark} from the function name if
 %   present (that is, if the original function had no colon).
 %    \begin{macrocode}
-\cs_set:Npx \@@_split_function:NN #1
+\cs_set_protected:Npn \@@_tmp:w #1
   {
-    \exp_not:N \exp_after:wN \exp_not:N \exp_after:wN
-    \exp_not:N \exp_after:wN \exp_not:N \@@_split_function_auxi:w
-      \exp_not:N \cs_to_str:N #1 \exp_not:N \q_mark \c_true_bool
-      \token_to_str:N : \exp_not:N \q_mark \c_false_bool
-      \exp_not:N \q_stop
+    \cs_set:Npn \@@_split_function:NN ##1
+      {
+        \exp_after:wN \exp_after:wN \exp_after:wN \@@_split_function_auxi:w
+          \cs_to_str:N ##1 \q_mark \c_true_bool
+          #1 \q_mark \c_false_bool \q_stop
+      }
+    \cs_set:Npn \@@_split_function_auxi:w
+        ##1 #1 ##2 \q_mark ##3##4 \q_stop ##5
+      { \@@_split_function_auxii:w ##5 ##1 \q_mark \q_stop {##2} ##3 }
+    \cs_set:Npn \@@_split_function_auxii:w ##1##2 \q_mark ##3 \q_stop
+      { ##1 {##2} }
   }
-\use:x
-  {
-    \cs_set:Npn \exp_not:N \@@_split_function_auxi:w
-      ##1 \token_to_str:N : ##2 \exp_not:N \q_mark ##3##4 \exp_not:N \q_stop ##5
-  }
-  { \@@_split_function_auxii:w #5 #1 \q_mark \q_stop {#2} #3 }
-\cs_set:Npn \@@_split_function_auxii:w #1#2 \q_mark #3 \q_stop
-  { #1 {#2} }
+\exp_after:wN \@@_tmp:w \token_to_str:N :
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
