--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1969,12 +1969,9 @@
           { : \exp_not:N \use_i:nn }
       }
   }
-\use:x
-  {
-    \cs_new_protected:Npn \exp_not:N \@@_generate_internal_variant:wwnNwnn
-        ##1 \token_to_str:N x ##2 \exp_not:N \q_mark
-        ##3 ##4 ##5 \exp_not:N \q_stop ##6 ##7
-  }
+\exp_last_unbraced:NNNNo
+  \cs_new_protected:Npn \@@_generate_internal_variant:wwnNwnn #1
+    { \token_to_str:N x } #2 \q_mark #3#4#5 \q_stop #6#7
   {
     #3
     \cs_if_free:cT {#6} { #4 {#6} {#7} }
