--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -571,12 +571,9 @@
     \exp_not:N \token_to_str:N #1 \exp_not:N \q_mark
       \tl_to_str:n { s_@@ _? } \exp_not:N \q_mark \exp_not:N \q_stop
   }
-\use:x
-  {
-    \cs_new:Npn \exp_not:N \@@_type_from_scan:w
-      ##1 \tl_to_str:n { s_@@ } ##2 \exp_not:N \q_mark ##3 \exp_not:N \q_stop
-      {##2}
-  }
+\exp_last_unbraced:NNNNo
+  \cs_new:Npn \@@_type_from_scan:w #1
+    { \tl_to_str:n { s_@@ } } #2 \q_mark #3 \q_stop {#2}
 %    \end{macrocode}
 % \end{macro}
 %
